[metadata]
name = aCT
version = 0.1
author = aCT team
author_email = act-dev@cern.ch
description = ARC Control Tower
license = Apache 2.0

[options]
packages = find:
package_dir = =src
python_requires = >= 3.6

# mysql-connector-python: version is pinned because utf8 errors can be received
# for higher versions, should switch to mariadb connector
#
# cryptography: version is pinned because >=38.* do not work with python 3.6,
# >=37.* emit deprecation warnings which upset the alarm and monitoring tools
install_requires =
    mysql-connector-python == 8.0.29
    cryptography < 37.0.0
    htcondor
    pylint
    requests
    prometheus_client
    selinux
    psutil
    flask
    pyjwt
    setproctitle

    pyarcrest @ git+https://github.com/jakobmerljak/pyarcrest.git

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    actbootstrap = act.common.aCTBootstrap:main
    actmain = act.common.aCTMain:main
    actreport = act.common.aCTReport:main
    actcriticalmonitor = act.common.aCTCriticalMonitor:main
    actheartbeatwatchdog = act.atlas.aCTHeartbeatWatchdog:main
    actldmxadmin = act.ldmx.aCTLDMXAdmin:main
