[metadata]
name = aCT
version = 0.1
author = aCT team
author_email = act-dev@cern.ch
description = ARC Control Tower
license = Apache 2.0

[options]
packages = find:
package_dir = =src
python_requires = >= 3.6

install_requires =
    mysql-connector-python
    cryptography
    htcondor
    pylint
    requests
    prometheus_client
    selinux
    psutil
    flask
    pyjwt
    setproctitle
    pyyaml

    pyarcrest @ git+https://github.com/jakobmerljak/pyarcrest.git

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    actbootstrap = act.common.aCTBootstrap:main
    actmain = act.common.aCTMain:main
    actreport = act.common.aCTReport:main
    actcriticalmonitor = act.common.aCTCriticalMonitor:main
    actheartbeatwatchdog = act.atlas.aCTHeartbeatWatchdog:main
    actldmxadmin = act.ldmx.aCTLDMXAdmin:main
    actkibana = act.common.kibana:main
